--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,13 @@ a{
     background-color: #1abc9c;
     padding-top: 150px;
 }
+.portfolio__image{
+    height: 250px;
+    background-color: pink;
+    padding: 20px;
+}
+.portfolio__image--content{
+    background-color: powderblue;
+    width: 200px;
+    height: 200px;
+}
