--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ header{
     padding: 1rem;
     width: 100%;
 }
+#bot__footer .row{
+    overflow:hidden;
+}
 a{
     text-decoration: none;
     color: white;
@@ -30,4 +33,20 @@ a{
 }
 .about__button--color{
     background-color: transparent;
+}
+.contact-me__button--color{
+    background-color: #1abc9c;
+}
+#top__footer{
+    background-color: #3a546d;
+}
+#bot__footer{
+    background-color: #2c3e50;
+}
+#bot__footer p{
+    margin-bottom: 0;
+}
+.debug{
+    height: 50px;
+    background-color: wheat;
 }
