--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ header{
     height: 80px;
     width: 100%;
 }
+header .navbar{
+    height: inherit;
+    padding: 0;
+}
 header .container, header .container .row{
     height: inherit;
 }
