--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,25 @@ a{
 #top__footer ul{
     padding-inline-start: 0px;
 }
+#portfolio .portfolio__image.overlay:hover::before{
+    position: absolute;
+    content: "";
+    display: block;
+    background-color: rgba(26, 188, 156, 0.9);
+    top: 0;
+    bottom:0;
+    left: 0;
+    right: 0;
+}
+#portfolio .portfolio__image.overlay:hover::after{
+    position: absolute;
+    content:"\f067";
+    font-family: "Font Awesome 5 Free"; 
+    font-weight: 900; 
+    font-size: 10rem;
+    display: block;
+    color: rgba(255, 255, 255, 0.9);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
