--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,9 @@ a{
     opacity: .65;
     transform: scale(.85) translateY(-.5rem) translateX(.15rem);
 }
+.form-control:focus {
+    box-shadow: none;
+}
 .footer__button--social{
     width: 50px;
     height: 50px;
